--- a/affiliate.html
+++ b/affiliate.html
@@ -65,6 +65,120 @@
 	// "https://www.youtube.com/channel/UCoJV3qDGpYINYc7-XVAAa_Q", // Youtube
 	// "https://www.instagram.com/getprojectstech/", // Instagram
 	"https://www.buymeacoffee.com/getprojects", // Buy me a coffee
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
+	"https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
     ];
     // on load update url
     const random = Math.floor(Math.random() * links.length);
