--- a/affiliate.html
+++ b/affiliate.html
@@ -7,6 +7,13 @@
 </head>
 <script>
     const links = [
+	    "https://amzn.to/46NhV38", // Amazon
+	    "https://amzn.to/47eok78", // Home inprovement
+	    "https://amzn.to/3QCiDL2", // DIY
+	    "https://amzn.to/3QltabV", // DIY toys
+	    "https://amzn.to/3MqjD2a", // Amazon Products
+	    "https://amzn.to/3FGv3Ls", // Diwali gifts
+	    
     "https://amzn.to/3F3znEn", // Iphones
 	"https://amzn.to/3PKwpJW", // Samsung
 	"https://amzn.to/3S2t0sP", // Oneplus
@@ -62,9 +69,10 @@
 	// "https://chrome.google.com/webstore/detail/tm-launcher/ppgcdhfpgpiecpjaobadcaigbhmkpgob", // TM Launcher
 	"https://chrome.google.com/webstore/detail/cdebchkcjjjigiomfhojmfkanjlaanjd", // Jarvis
 	"https://chrome.google.com/webstore/detail/njadochimfjnmpnaehkbdnbpmgbnajmk", // Recolor
-	// "https://www.youtube.com/channel/UCoJV3qDGpYINYc7-XVAAa_Q", // Youtube
-	// "https://www.instagram.com/getprojectstech/", // Instagram
-	// "https://www.buymeacoffee.com/getprojects", // Buy me a coffee
+	"https://www.youtube.com/channel/UCoJV3qDGpYINYc7-XVAAa_Q", // Youtube
+	"https://www.instagram.com/getprojectstech/", // Instagram
+	"https://www.buymeacoffee.com/getprojects", // Buy me a coffee
+	"https://amzn.to/40m35OU", // Great Indian Festival
 	// "https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
 	// "https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
 	// "https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
