--- a/affiliate.html
+++ b/affiliate.html
@@ -13,7 +13,7 @@
 	    "https://amzn.to/3QltabV", // DIY toys
 	    "https://amzn.to/3MqjD2a", // Amazon Products
 	    "https://amzn.to/3FGv3Ls", // Diwali gifts
-	    
+	    "https://shrinkme.io/ref/106848397370369302041", // ShrinkMe Referral
     "https://amzn.to/3F3znEn", // Iphones
 	"https://amzn.to/3PKwpJW", // Samsung
 	"https://amzn.to/3S2t0sP", // Oneplus
@@ -66,12 +66,19 @@
     "https://amzn.to/3rJTXqt", // Macbook Air M1
     "https://amzn.to/3S15YSR", // Unique Products
 	"https://chrome.google.com/webstore/detail/afaenafmlblabamefeeedcmonilklgbk", // Klean Web
-	// "https://chrome.google.com/webstore/detail/tm-launcher/ppgcdhfpgpiecpjaobadcaigbhmkpgob", // TM Launcher
+	    "https://shrinke.us/0PRg1pmB",
+	// "https://chrome.google.com/webstore/detail/ppgcdhfpgpiecpjaobadcaigbhmkpgob", // TM Launcher
+	    "https://shrinke.us/5Q78k",
 	"https://chrome.google.com/webstore/detail/cdebchkcjjjigiomfhojmfkanjlaanjd", // Jarvis
+	    "https://shrinke.us/dYev4S",
 	"https://chrome.google.com/webstore/detail/njadochimfjnmpnaehkbdnbpmgbnajmk", // Recolor
+	    "https://shrinke.us/HTki",
 	"https://www.youtube.com/channel/UCoJV3qDGpYINYc7-XVAAa_Q", // Youtube
+	    "https://shrinke.us/Yv0K",
 	"https://www.instagram.com/getprojectstech/", // Instagram
+	    "https://shrinke.us/k28T",
 	"https://www.buymeacoffee.com/getprojects", // Buy me a coffee
+	    "https://shrinke.us/lE8L",
 	"https://amzn.to/40m35OU", // Great Indian Festival
 	// "https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
 	// "https://go.flot.ai/adspage/cpc/rewards", // Flot.ai
