--- a/affiliate.html
+++ b/affiliate.html
@@ -80,7 +80,7 @@
 			// "https://amzn.to/3M0izSo", // Amazon Electronics
 			// "https://amzn.to/3rJTXqt", // Macbook Air M1
 			// "https://amzn.to/3S15YSR", // Unique Products
-			// "https://chrome.google.com/webstore/detail/afaenafmlblabamefeeedcmonilklgbk", // Klean Web
+			"https://chrome.google.com/webstore/detail/afaenafmlblabamefeeedcmonilklgbk", // Klean Web
 			// "https://shrinke.us/0PRg1pmB",
 			// "https://chrome.google.com/webstore/detail/ppgcdhfpgpiecpjaobadcaigbhmkpgob", // TM Launcher
 			// "https://shrinke.us/5Q78k",
