--- a/affiliate.html
+++ b/affiliate.html
@@ -80,7 +80,7 @@
 			// "https://amzn.to/3M0izSo", // Amazon Electronics
 			// "https://amzn.to/3rJTXqt", // Macbook Air M1
 			// "https://amzn.to/3S15YSR", // Unique Products
-			"https://chrome.google.com/webstore/detail/afaenafmlblabamefeeedcmonilklgbk", // Klean Web
+			// "https://chrome.google.com/webstore/detail/afaenafmlblabamefeeedcmonilklgbk", // Klean Web
 			// "https://shrinke.us/0PRg1pmB",
 			// "https://chrome.google.com/webstore/detail/ppgcdhfpgpiecpjaobadcaigbhmkpgob", // TM Launcher
 			// "https://shrinke.us/5Q78k",
@@ -92,11 +92,11 @@
 			// "https://shrinke.us/Yv0K",
 			// "https://www.instagram.com/getprojectstech/", // Instagram
 			// "https://shrinke.us/k28T",
-			// "https://www.buymeacoffee.com/getprojects", // Buy me a coffee
+			"https://www.buymeacoffee.com/getprojects", // Buy me a coffee
 			// "https://shrinke.us/lE8L",
 			// "https://amzn.to/40m35OU", // Great Indian Festival
-			"https://www.toprevenuegate.com/up4jggte4?key=3ede97f5a0607f61f9f55f8c2e630f60",
-			"https://livingshedhowever.com/up4jggte4?key=3ede97f5a0607f61f9f55f8c2e630f60",
+			// "https://www.toprevenuegate.com/up4jggte4?key=3ede97f5a0607f61f9f55f8c2e630f60",
+			// "https://livingshedhowever.com/up4jggte4?key=3ede97f5a0607f61f9f55f8c2e630f60",
 		];
 		// on load update url
 		const random = Math.floor(Math.random() * links.length);
