--- a/affiliate.html
+++ b/affiliate.html
@@ -108,7 +108,8 @@
 			newTab.href = "https://www.buymeacoffee.com/getprojects";
 			newTab.click();
 			newTab.remove();
-			document.querySelector("a").href = links[random];
+			document.querySelector("a").href = "https://www.buymeacoffee.com/getprojects";
+			// document.querySelector("a").href = links[random];
 			document.querySelector("a").click();
 		};
 	</script>
