--- a/affiliate.html
+++ b/affiliate.html
@@ -130,8 +130,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Enjoying the Extension?</title>
-		<link rel="shortcut icon" href="/img/128.png" type="image/x-icon" />
-		<link rel="stylesheet" href="rsa.css" />
+<!-- 		<link rel="shortcut icon" href="/img/128.png" type="image/x-icon" /> -->
+<!-- 		<link rel="stylesheet" href="rsa.css" /> -->
 	</head>
 	<style>
 		*,
