--- a/affiliate.html
+++ b/affiliate.html
@@ -240,7 +240,7 @@
 					>Donate Here 😍</a
 				>
 			</div>
-			<h2>or</h2>
+<!-- 			<h2>or</h2>
 			<div id="share">
 				<iframe
 					src="https://giphy.com/embed/MllRYLg8p2vn6WhfE3"
@@ -248,7 +248,7 @@
 				<h2>Share the Extension</h2>
 				<p>Share the extension with your friends and colleagues.</p>
 				<a onclick="msg()">Spread & Support 🤩</a>
-			</div>
+			</div> -->
 		</div>
 		<div id="msg">
 			<iframe src="" style="height: 200px !important; width: 340px !important; padding: 0 !important;" frameborder="0"></iframe>
