--- a/affiliate.html
+++ b/affiliate.html
@@ -200,7 +200,7 @@
 		a:hover {
 			background-color: #0072ff;
 		}
-		iframe {
+		iframe, img {
 			height: 240px !important;
 			padding: 10px 0px !important;
 			width: 240px !important;
@@ -240,15 +240,16 @@
 					>Donate Here 😍</a
 				>
 			</div>
-<!-- 			<h2>or</h2>
+			<!-- <h2>or</h2> -->
 			<div id="share">
-				<iframe
-					src="https://giphy.com/embed/MllRYLg8p2vn6WhfE3"
-					frameborder="0"></iframe>
-				<h2>Share the Extension</h2>
-				<p>Share the extension with your friends and colleagues.</p>
-				<a onclick="msg()">Spread & Support 🤩</a>
-			</div> -->
+				<img
+					src="optimhire.gif"></img>
+				<h2>Looking for Jobs?</h2>
+				<p>Join the platform and get your dream job!!</p>
+				<a onclick="msg()"
+					href="https://optimhire.com/?ref_code=kartikey-tiwari-415479"
+					target="_blank">Get a Job⚡</a>
+			</div>
 		</div>
 		<div id="msg">
 			<iframe src="" style="height: 200px !important; width: 340px !important; padding: 0 !important;" frameborder="0"></iframe>
