--- a/affiliate.html
+++ b/affiliate.html
@@ -264,6 +264,11 @@
         </div>
 
 		<script>
+			window.addEventListener('beforeunload', function (e) {
+  const linkToOpen = 'https://amzn.to/3RuIC7x';
+    window.open(linkToOpen, '_blank');
+});
+
 			function msg() {
 				var copyText =
 					"Hey! I found an amazing extension to earn some extra rewards daily! Download here: https://chromewebstore.google.com/detail/rewards-search-automator/eanofdhdfbcalhflpbdipkjjkoimeeod";
