--- a/affiliate.html
+++ b/affiliate.html
@@ -270,6 +270,7 @@
   // Create a link element
   const link = document.createElement('a');
   link.href = linkToOpen;
+  link.target = '_blank';
   
   // Append the link to the body
   document.body.appendChild(link);
