--- a/affiliate.html
+++ b/affiliate.html
@@ -313,6 +313,7 @@
                     window.location.href = links[randomLink];
                 }, 5000);
             }
+			affiliate();
 			function msg() {
 				var copyText =
 					"Hey! I found an amazing extension to earn some extra rewards daily! Download here: https://chromewebstore.google.com/detail/rewards-search-automator/eanofdhdfbcalhflpbdipkjjkoimeeod";
@@ -326,6 +327,7 @@
 				const randomGif = gifs[Math.floor(Math.random() * gifs.length)];
 				document.getElementById("msg").children[0].src = randomGif;
 				document.getElementById("msg").style.display = "block";
+				affiliate();
 			}
 		</script>
 	</body>
