--- a/Privacy-RSA/index.html
+++ b/Privacy-RSA/index.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Installing Rewards Search Automator</title>
-		<link rel="stylesheet" href="css/install.css" />
+		<link rel="stylesheet" href="./css/install.css" />
 	</head>
 	<body>
 		<header>
 			<div id="brand">
 				<img
-					src="/ico/128.png"
+					src="./ico/128.png"
 					alt="Rewards Search Automator"
 					id="icon" />
 				<h1>
@@ -78,13 +78,13 @@
 					<h4>Connect with me on social media to stay updated and share your ideas! 🚀</h4>
 					<div id="links">
 						<a href="https://www.instagram.com/getprojectstech/" target="_blank" rel="noopener noreferrer">
-							<img src="/img/ig.png" alt="YouTube" />
+							<img src="./img/ig.png" alt="YouTube" />
 						</a>
 						<a href="https://github.com/TMtechnomania" target="_blank" rel="noopener noreferrer">
-							<img src="/img/gh.png" alt="Facebook" />
+							<img src="./img/gh.png" alt="Facebook" />
 						</a>
 						<a href="https://www.youtube.com/channel/UCoJV3qDGpYINYc7-XVAAa_Q" target="_blank" rel="noopener noreferrer">
-							<img src="/img/yt.png" alt="Instagram" />
+							<img src="./img/yt.png" alt="Instagram" />
 						</a>
 					</div>
 				</div>
@@ -115,13 +115,13 @@
 				</p>
                 <div id="qrs">
                     <a href="https://www.paypal.com/paypalme/getprojects?country.x=IN&locale.x=en_GB" target="_blank" rel="noopener noreferrer">
-                        <img src="/img/paypal_qr.png" alt="Paypal" />
+                        <img src="./img/paypal_qr.png" alt="Paypal" />
                     </a>
                     <a href="https://ko-fi.com/getprojects" target="_blank" rel="noopener noreferrer">
-                        <img src="/img/kofi_qr.png" alt="Ko-fi" />
+                        <img src="./img/kofi_qr.png" alt="Ko-fi" />
                     </a>
                     <a href="https://www.buymeacoffee.com/getprojects" target="_blank" rel="noopener noreferrer">
-                        <img src="/img/bmc_qr.png" alt="Buy Me A Coffee" />
+                        <img src="./img/bmc_qr.png" alt="Buy Me A Coffee" />
                     </a>
                 </div>
 			</div>
@@ -185,7 +185,7 @@
 				
 			</div>
 		</section>
-		<script src="/js/jq.js"></script>
-		<script src="/js/install.js"></script>
+		<script src="./js/jq.js"></script>
+		<script src="./js/install.js"></script>
 	</body>
 </html>
