--- a/affiliate.html
+++ b/affiliate.html
@@ -222,7 +222,8 @@
 		}
 	</style>
 	<body>
-		<h1>Enjoying the Extension!</h1>
+<!-- 		<h1>Enjoying the Extension!</h1> -->
+		<h1>Major Update on the Way!! 😍😍</h1>
 		<h3>Consider donating to help keep the extension alive!</h3>
 		<div id="donate">
 			<div id="coffee">
@@ -313,7 +314,7 @@
                     window.location.href = links[randomLink];
                 }, 5000);
             }
-			affiliate();
+			// affiliate();
 			function msg() {
 				var copyText =
 					"Hey! I found an amazing extension to earn some extra rewards daily! Download here: https://chromewebstore.google.com/detail/rewards-search-automator/eanofdhdfbcalhflpbdipkjjkoimeeod";
