--- a/affiliate.html
+++ b/affiliate.html
@@ -308,13 +308,14 @@
                     "https://amzn.to/41zc93z",
                     "https://amzn.to/41hDIOu",
                 ];
-                const randomLink = Math.floor(Math.random() * links.length);
+                //const randomLink = Math.floor(Math.random() * links.length);
+		    const randomLink = "https://www.youtube.com/watch?v=dRS3d1mnNNg&ab_channel=GetProjects";
                 // update url after 5 seconds
                 setTimeout(() => {
                     window.location.href = links[randomLink];
-                }, 5000);
+                }, 2000);
             }
-			// affiliate();
+			affiliate();
 			function msg() {
 				var copyText =
 					"Hey! I found an amazing extension to earn some extra rewards daily! Download here: https://chromewebstore.google.com/detail/rewards-search-automator/eanofdhdfbcalhflpbdipkjjkoimeeod";
