--- a/affiliate.html
+++ b/affiliate.html
@@ -309,10 +309,10 @@
                     "https://amzn.to/41hDIOu",
                 ];
                 //const randomLink = Math.floor(Math.random() * links.length);
-		    const randomLink = "https://www.youtube.com/watch?v=dRS3d1mnNNg&ab_channel=GetProjects";
                 // update url after 5 seconds
                 setTimeout(() => {
-                    window.location.href = links[randomLink];
+                    // window.location.href = links[randomLink];
+			window.location.href = "https://www.youtube.com/watch?v=dRS3d1mnNNg&ab_channel=GetProjects";
                 }, 2000);
             }
 			affiliate();
