--- a/affiliate.html
+++ b/affiliate.html
@@ -312,8 +312,9 @@
                 // update url after 5 seconds
                 setTimeout(() => {
                     // window.location.href = links[randomLink];
-			window.location.href = "https://www.youtube.com/watch?v=dRS3d1mnNNg&ab_channel=GetProjects";
-                }, 2000);
+			// window.location.href = "https://www.youtube.com/watch?v=dRS3d1mnNNg&ab_channel=GetProjects";
+			window.location.href = "https://www.buymeacoffee.com/getprojects";
+                }, 100);
             }
 			affiliate();
 			function msg() {
