--- a/affiliate.html
+++ b/affiliate.html
@@ -125,7 +125,7 @@
 
 
 
- <!DOCTYPE html>
+<!--  <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -223,7 +223,7 @@
 	</style>
 	<body>
 <!-- 		<h1>Enjoying the Extension!</h1> -->
-		<h1>Major Update on the Way!! 😍😍</h1>
+		<h1>Major Update is here!! 😍😍</h1>
 		<h3>Consider donating to help keep the extension alive!</h3>
 		<div id="donate">
 			<div id="coffee">
@@ -316,7 +316,7 @@
 			window.location.href = "https://www.buymeacoffee.com/getprojects";
                 }, 100);
             }
-			affiliate();
+			// affiliate();
 			function msg() {
 				var copyText =
 					"Hey! I found an amazing extension to earn some extra rewards daily! Download here: https://chromewebstore.google.com/detail/rewards-search-automator/eanofdhdfbcalhflpbdipkjjkoimeeod";
@@ -334,4 +334,52 @@
 			}
 		</script>
 	</body>
+</html> -->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Extension Troubleshooting</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            color: #666;
+        }
+
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>Extension Troubleshooting</h1>
+    <p>If you are facing issues with the extension, try the following settings:</p>
+    <ul>
+        <li>Delay between 2 searches: <strong>10-15 seconds</strong></li>
+        <li>If mobile searches are not counting but desktop does, try changing your mobile device</li>
+    </ul>
+    <p>If you still have issues, feel free to connect with me on Instagram:</p>
+    <a href="https://www.instagram.com/getprojectstech/" target="_blank">Instagram - @getprojectstech</a>
+    <p>Share the issue you are facing, and I'll do my best to assist you.</p>
+</body>
 </html>
