--- a/affiliate.html
+++ b/affiliate.html
@@ -45,5 +45,6 @@
     <p>If you still have issues, feel free to connect with me on Instagram:</p>
     <a href="https://www.instagram.com/getprojectstech/" target="_blank">Instagram - @getprojectstech</a>
     <p>Share the issue you are facing, and I'll do my best to assist you.</p>
+    <img src="/micro.png"></img>
 </body>
 </html>
