--- a/affiliate.html
+++ b/affiliate.html
@@ -38,10 +38,9 @@
 <body>
     <h1>Extension Troubleshooting</h1>
     <p>If you are facing issues with the extension, try the following settings:</p>
-    <ul>
-        <li>Delay between 2 searches: <strong>10-15 seconds</strong></li>
-        <li>If mobile searches are not counting but desktop does, try changing your mobile device</li>
-    </ul>
+        <p>Delay between 2 searches: <strong>10-15 seconds</strong></p>
+    <p>Perform some <strong>Manual Searches</strong>.</p>
+        <p>If mobile searches are not counting but desktop does, try changing your mobile device</p>
     <p>If you still have issues, feel free to connect with me on Instagram:</p>
     <a href="https://www.instagram.com/getprojectstech/" target="_blank">Instagram - @getprojectstech</a>
     <p>Share the issue you are facing, and I'll do my best to assist you.</p>
