--- a/affiliate.html
+++ b/affiliate.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <h1>Extension Troubleshooting</h1>
+    <h1>Extension Troubleshooting for v1.3.5 || version 1.3.6 waiting for review on store</h1>
     <p>If you are facing issues with the extension, try the following settings:</p>
         <p>Delay between 2 searches: <strong>10-15 seconds</strong></p>
     <p>Perform some <strong>Manual Searches</strong>.</p>
