--- a/affiliate.html
+++ b/affiliate.html
@@ -36,8 +36,10 @@
     </style>
 </head>
 <body>
-    <h1>Extension Troubleshooting for v1.3.5 || version 1.3.6 available, restart browser</h1>
+    <h1>v1.3.6 is available on store - This is a common announcment page!! not a troubleshoot page, purpose of this page is to aware users about various things regarding the extension!!</h1>
+    <h2>This page will update time to time, it is the same page where the donation option was avaliable, it was important to let users know because so many users were confused that if the extension get into troubleshoot mode</h2>
     <p>If you are facing issues with the extension, try the following settings:</p>
+<p>Reinstall the extension if your v1.3.6 is not installed well</p>
         <p>Delay between 2 searches: <strong>10-15 seconds</strong></p>
     <p>Perform some <strong>Manual Searches</strong>.</p>
         <p>If mobile searches are not counting but desktop does, try changing your mobile device</p>
