--- a/affiliate.html
+++ b/affiliate.html
@@ -1,51 +1,223 @@
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extension Troubleshooting</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 50px;
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Thanks for using Extension by GetProjects</title>
+		<script
+			src="https://code.jquery.com/jquery-3.7.1.min.js"
+			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+			crossorigin="anonymous"></script>
+	</head>
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+			font-family: system-ui, -apple-system, BlinkMacSystemFont,
+				"Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+				"Helvetica Neue", sans-serif;
+		}
+		#donation {
+			align-items: center;
+            background: #0072ff;
+			/* background-color: hsla(0, 100%, 50%, 1);
+			background-image: radial-gradient(
+					at 40% 20%,
+					hsla(28, 100%, 74%, 1) 0px,
+					transparent 50%
+				),
+				radial-gradient(
+					at 80% 0%,
+					hsla(189, 100%, 56%, 1) 0px,
+					transparent 50%
+				),
+				radial-gradient(
+					at 0% 50%,
+					hsla(355, 100%, 93%, 1) 0px,
+					transparent 50%
+				),
+				radial-gradient(
+					at 80% 50%,
+					hsla(340, 100%, 76%, 1) 0px,
+					transparent 50%
+				),
+				radial-gradient(
+					at 0% 100%,
+					hsla(22, 100%, 77%, 1) 0px,
+					transparent 50%
+				),
+				radial-gradient(
+					at 80% 100%,
+					hsla(242, 100%, 70%, 1) 0px,
+					transparent 50%
+				),
+				radial-gradient(
+					at 0% 0%,
+					hsla(343, 100%, 76%, 1) 0px,
+					transparent 50%
+				); */
+            color: #fff;
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			height: fit-content;
+            padding: calc(40px * var(--scale)) 0;
+            text-shadow: 0 calc(2px * var(--scale)) calc(2px * var(--scale)) #000;
+			width: 100%;
+		}
+		#donation h1 {
+			font-size: calc(48px * var(--scale));
+		}
+		#donation h2 {
+			font-size: calc(32px * var(--scale));
+			font-weight: normal;
+			padding: 0 0 calc(20px * var(--scale)) 0;
+		}
+        #donation span {
+            font-size: calc(20px * var(--scale));
         }
-
-        h1 {
-            color: #333;
+		#qrs {
+			align-items: center;
+            background: #0003;
+            border-radius: calc(20px * var(--scale));
+			display: flex;
+			gap: calc(20px * var(--scale));
+			justify-content: space-between;
+            padding: calc(20px * var(--scale));
+		}
+		#qrs img {
+            background: #000;
+            border-radius: calc(10px * var(--scale));
+			height: calc(192px * var(--scale));
+            padding: calc(6px * var(--scale));
+			width: calc(192px * var(--scale));
+		}
+        main{
+            padding: calc(60px * var(--scale)) calc(240px * var(--scale));
         }
-
-        p {
-            color: #666;
+        main h2{
+            font-size: calc(40px * var(--scale));
+            font-weight: bold;
+            padding: 0 0 calc(10px * var(--scale)) 0;
         }
-
-        a {
-            color: #007BFF;
-            text-decoration: none;
+        main h3{
+            font-size: calc(32px * var(--scale));
+            font-weight: normal;
+            padding: 0 0 calc(10px * var(--scale)) 0;
         }
-
-        a:hover {
-            text-decoration: underline;
+        main h4{
+            font-size: calc(28px * var(--scale));
+            font-weight: bold;
+            padding: 0 0 calc(20px * var(--scale)) 0;
         }
-    </style>
-</head>
-<body>
-    <h1>v1.3.6 is available on store - This is a common announcment page!! not a troubleshoot page, purpose of this page is to aware users about various things regarding the extension!!</h1>
-    <h2>This page will update time to time, it is the same page where the donation option was avaliable, it was important to let users know because so many users were confused that if the extension get into troubleshoot mode</h2>
-    <p>If you are facing issues with the extension, try the following settings:</p>
-<p>Reinstall the extension if your v1.3.6 is not installed well</p>
-        <p>Delay between 2 searches: <strong>10-15 seconds</strong></p>
-    <p>Perform some <strong>Manual Searches</strong>.</p>
-        <p>If mobile searches are not counting but desktop does, try changing your mobile device</p>
-    <p>If you still have issues, feel free to connect with me on Instagram:</p>
-    <a href="https://www.instagram.com/getprojectstech/" target="_blank">Instagram - @getprojectstech</a>
-    <p>Share the issue you are facing, and I'll do my best to assist you.</p>
-    <img src="/micro.png"></img>
-</body>
+        main > div > div{
+            background: #f3f3f3;
+            border-radius: calc(10px * var(--scale));
+            padding: calc(60px * var(--scale)) calc(80px * var(--scale));
+            margin: calc(20px * var(--scale)) 0;
+        }
+        main ol{
+            font-size: calc(20px * var(--scale));
+            font-weight: normal;
+        }
+        main p{
+            font-size: calc(22px * var(--scale));
+            padding-bottom: calc(20px * var(--scale));
+        }
+	</style>
+	<body>
+		<div id="donation">
+			<h1>Happy with the extension!</h1>
+			<h2>Fuel the extension to keep it running!!</h2>
+            <span>Scan / Click to visit:</span>
+			<div id="qrs">
+				<a
+					href="https://www.paypal.com/paypalme/getprojects?country.x=IN&locale.x=en_GB"
+					target="_blank"
+					rel="noopener noreferrer">
+					<img
+						src="https://tmtechnomania.github.io/Privacy-RSA/img/paypal_qr.png"
+						alt="" />
+				</a>
+				<a
+					href="https://www.buymeacoffee.com/getprojects"
+					target="_blank"
+					rel="noopener noreferrer">
+					<img
+						src="https://tmtechnomania.github.io/Privacy-RSA/img/bmc_qr.png"
+						alt="" />
+				</a>
+                <a href="https://ko-fi.com/getprojects" target="_blank" rel="noopener noreferrer">
+                    <img
+                        src="https://tmtechnomania.github.io/Privacy-RSA/img/kofi_qr.png"
+                        alt="" />
+                </a>
+			</div>
+		</div>
+        <main>
+            <h2>Announcements & Updates:</h2>
+            <h3><strong>v1.3.7</strong> has been launched for everyone</h3>
+            <p>This update introduces a brand-new feature allowing you to toggle any tab between mobile and your regular desktop, enabling the use of a simulated mobile device for other websites. This functionality is especially useful for developers, providing a list of over 60+ different devices to choose from. It aids in debugging websites and testing mobile compatibility and responsiveness.</p>
+            <h2>Still confused how to use the extension?</h2>
+            <h3>Here is a step by step guide for you.</h3>
+            <div id="howto">
+                <div class="search">
+                    <h4>Instant Search</h4>
+                    <ol>
+                        <li>Click on the Rewards Search Automator's icon available in the right side of the address bar of your browser. If not, click on the extension icon that looks like a piece of puzzle.</li>
+                        <li>Then, scroll to the Rewards Search Automator and there will be a pin icon in the right that either looks like a pin or a closed eye, click on it to pin the extension.</li>
+                        <li>Launch the Rewards Search Automator</li>
+                        <li>Now, based on your region, you must know how many points are given per search, if not, choose the predefined search button from the third section just above the footer.</li>
+                        <li>Set the minimum and maximum delay somewhere between 10-12s and 15-20s respectively.</li>
+                        <li>Click on the start button and let the extension do the work for you.</li>
+                    </ol>
+                </div>
+                <div class="schedule">
+                    <h4>Schedule Search</h4>
+                    <ol>
+                        <li>Click on the Rewards Search Automator's icon available in the right side of the address bar of your browser. If not, click on the extension icon that looks like a piece of puzzle.</li>
+                        <li>Then, scroll to the Rewards Search Automator and there will be a pin icon in the right that either looks like a pin or a closed eye, click on it to pin the extension.</li>
+                        <li>Launch the Rewards Search Automator</li>
+                        <li>Click on the Schedule tab.</li>
+                        <li>Now, based on your region, you must know how many points are given per search, if not, choose the predefined search button from the third section just above the footer.</li>
+                        <li>Choose "Startup", if you want the extension perform the searches automatically everytime you open your browser.</li>
+                        <li>Choose "After 5 Minutes", if you want the extension perform searches every 5 to 7.5 minutes. You need to click on the "Start now - Every 5 Minutes" button in order to use this from the current session.</li>
+                        <li>Choose "After 15 Minutes", if you want the extension perform searches every 15 to 20 minutes. You need to click on the "Start now - Every 15 Minutes" button in order to use this from the current session.</li>
+                        <li>Set the minimum and maximum delay between each search somewhere between 10-12s and 15-20s respectively.</li>
+                        <li>Click on the schedule button and set the time when you want to start the search.</li>
+                        <li>Click on the start button and let the extension do the work for you.</li>
+                    </ol>
+                </div>
+            </div>
+            <h2>Facing issues in earning points?</h2>
+            <h3>Here is a troubleshooting guide for you.</h3>
+            <div id="troubleshoot">
+                <div class="search">
+                    <h4>Common Troubleshooting methods:</h4>
+                    <ol>
+                        <li>Schedule searches are not working as expected? Try checking if your browser is allowed to run in background or any setting is allowing extensions to run in the background even when the app is closed. Close your browser well, so that the startup trigger help you with automated schedule searches!</li>
+                        <li>Pupop is not lauching, or opening install tab instead? You need to agree with the Terms & Conditions of the extension in order to use it.</li>
+                        <li>Searches are not performed with Instant Search option? You can try changing the values of the Desktop and Mobile searches or try reinstalling the extension to remove any corrupt storage.</li>
+                        <li>Searches performed but points not collected? Consider checking the Microsoft's Policy in your region, or perform some manual search without extension, or sometimes you may need to perform some extra searches in order to start collecting points.</li>
+                        <li>Mobile searches performed but not rewarded? Try changing your emulation device by clicking on the mobile name in the bottom right of popup.</li>
+                        <li>Less or no points rewarded even after performing manual searches? You must check if there is a time limit in your region for obtaining a fix amount of points.</li>
+                        <li>Closed the search tab but the stop button is still showing in the popup? You should not interupt any extension process, you can stop the searches using stop button in the popup anytime.</li>
+                        <li>Mobile simulation is not working right? Try changing your mobile device by clicking on the mobile name in bottom right of the popup, Also, you may need to follow some speed-up tricks because the simulation might not start as expected on slower devices.</li>
+                    </ol>
+                </div>
+            </div>
+            <h2>Still facing issues?</h2>
+            <p>Feel free to contact me <a href="https://www.instagram.com/getprojectstech/" target="_blank" rel="noopener noreferrer">@getprojectstech</a></p>
+        </main>
+	</body>
+	<script>
+		$(document).ready(function () {
+			const width = screen.width;
+			const scale = width / 1920;
+			console.log(scale);
+			$("body").css("--scale", scale);
+		});
+	</script>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="getprojects" data-description="Support me on Buy me a coffee!" data-message="" data-color="#0072ff" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </html>
