--- a/affiliate.html
+++ b/affiliate.html
@@ -105,6 +105,7 @@
 			background: #111;
 			display: flex;
 			height: calc(64px * var(--scale));
+			font-size: calc(18px * var(--scale));
 			justify-content: center;
 			padding: 0;
 			text-align: center;
