--- a/affiliate.html
+++ b/affiliate.html
@@ -151,7 +151,8 @@
 		}
 		main iframe{
 			aspect-ratio: 16/9;
-			width: 100%;
+			diplay: inline;
+			width: 50%;
 		}
         main div ol{
             font-size: calc(20px * var(--scale));
@@ -273,6 +274,7 @@
             <h2>Still confused how to install and use the extension?</h2>
             <h3>Here is a step by step guide for you.</h3>
 			<iframe src="https://www.youtube.com/embed/5CU1gvnsaEg?si=88Gj0Cf5gxrLIuhc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/We1iXIlTuMo?si=2x_140udMgv5X2u2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div id="howto">
 				<!-- <div id="install"> -->
 					<h4>Installation and Setup:</h4>
